Fix spacing

--- a/styles/sass/ui/posts.scss
+++ b/styles/sass/ui/posts.scss
@@ -52,7 +52,7 @@
 
 .articleList__details
 {
-    //margin-left: 24px;
+    padding-left: 24px;
     
     display: inline-block;
     
